# sample-datafold-dbt-project

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  Makefile  README.md  pyproject.toml  requirements-dbt.txt
.github/workflows/: black.yml  dbt.yml  sqlfluff.yml
dbt/: dbt_project.yml
dbt/macros/: create_udfs.sql
dbt/models/: schema.yml  sources.yml  test_model.sql  test_model2.sql
dbt/profiles/: profiles.yml
dbt/state/ppb16761.us-east-1/TEST/PUBLIC/: manifest.json  run_results.json
scripts/: dbt.py  run_dbt.ps1  setup.ps1  setup_precommit.ps1  source_env.ps1
